--- a/pages/shop.html
+++ b/pages/shop.html
@@ -4,6 +4,14 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+      <link
+         rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+         crossorigin="anonymous"
+         referrerpolicy="no-referrer"
+      />
       <link rel="stylesheet" href="../font/fonts.css" />
       <link rel="stylesheet" href="../style/grid.css" />
       <link rel="stylesheet" href="../style/main.css" />
@@ -80,14 +88,14 @@
                            <div class="product">
                               <div class="product__img">
                                  <img
-                                    src="../img/shop/skateborad/1-1_96650c4e897245c3b5ff7ecc1eabb913_grande.jpg"
+                                    src="../img/shop/longboard/1500k_97cm_-_3_66f9758a63fc4dfe857ff584a3a6aa97_grande.jpg"
                                     alt=""
                                  />
                               </div>
                               <div class="product__title">
-                                 Deck ván trượt DBH - sản phẩm chuyên
+                                 Deck ván trượt DBH
                               </div>
-                              <div class="product__price">250,000đ</div>
+                              <div class="product__price">50,000đ</div>
                            </div>
                         </div>
                         <div class="col l-3">
@@ -238,23 +246,69 @@
          <div class="section-shop__modal">
             <div class="section-shop__modal--box">
                <div class="modal-product__img">
-                  <img
-                     src="../img/shop/cruiser board/2-1_f4d4a54baadb4affac717c0d8c1a69a3_grande.jpg"
-                     alt=""
-                  />
+                  <img alt="" />
                </div>
-               <div class="modal-product__title">
-                  Bearing skateborad chính hãng DO BY HEART chuyên nghiệp
+               <div class="modal-product__content">
+                  <div class="modal-product__content--close">X</div>
+                  <div class="modal-product__content--title"></div>
+                  <div class="modal-product__content--price"></div>
+                  <a href="#" class="btn modal-product__content--btn"
+                     >mua ngay</a
+                  >
                </div>
-               <div class="modal-product__price">250,000đ</div>
-               <div class="btn modal-product__btn">mua ngay</div>
             </div>
          </div>
          <div class="footer">
-            <div>Duck Skateboard trên FB</div>
-            <div>LH: 0971620067</div>
+            <div class="footer__contact">
+               <div class="footer__contact--title">Liên hệ</div>
+               <div class="footer__contact--content">
+                  <i class="fas fa-map-marker-alt"></i>
+                  <span>Số 31 Ngõ 194 Đội Căn, Hà Nội</span>
+               </div>
+               <div class="footer__contact--content">
+                  <i class="fas fa-phone-alt"></i>
+                  <span>0987811351</span>
+               </div>
+               <div class="footer__contact--content">
+                  <i class="far fa-envelope"></i>
+                  <span>duckskateboard@gmail.com</span>
+               </div>
+               <div class="footer__contact--title">Liên kết với chúng tôi</div>
+               <ul class="u-footer-list footer__contact--icon">
+                  <li>
+                     <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  </li>
+                  <li>
+                     <a href="#"><i class="fab fa-twitter"></i></a>
+                  </li>
+                  <li>
+                     <a href="#"><i class="fab fa-youtube-square"></i></a>
+                  </li>
+                  <li>
+                     <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                  </li>
+               </ul>
+            </div>
+            <ul class="u-footer-list footer__link">
+               <li class="footer__title">Liên Kết</li>
+               <li><a href="#">&#10146;Trang chủ</a></li>
+               <li><a href="#">&#10146;Sản phẩm</a></li>
+               <li><a href="#">&#10146;Giới thiệu</a></li>
+               <li><a href="#">&#10146;Chính sách</a></li>
+            </ul>
+            <ul class="u-footer-list footer__items">
+               <li class="footer__title">Sản phẩm</li>
+               <li><a href="#">&#10146;Ván Skateboard</a></li>
+               <li><a href="#">&#10146;Ván Cruiserboard</a></li>
+               <li><a href="#">&#10146;Ván Longboard</a></li>
+               <li><a href="#">&#10146;Ván Penny</a></li>
+               <li><a href="#">&#10146;Phụ kiện ván trượt</a></li>
+            </ul>
+         </div>
+         <div class="footer__coppyright">
+            Coppyright &#169; 2021 Duck Skateboard.
          </div>
       </div>
-      <script src="../style/main.js"></script>
+      <script src="../style/shop.js"></script>
    </body>
 </html>
